# Auto-Translate-localizables

./: .gitignore  BEFORE_AFTER.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.py  EXECUTION_SUMMARY.md  GITHUB_ACTION_TEMPLATE.md  GITHUB_CHECKLIST.md  INSTALL_GUIDE.md  LICENSE  MANIFEST.in  PHASE_1_COMPLETE.md  PROJECT_INFO.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README.pypi.md  README_NEW.md  README_TRANSLATION.md  RELEASE_READY.md  SUCCESS.txt  SUMMARY.txt  TRANSFORMATION.md  WHATS_NEXT.md  install_dev.sh  localization_app.py  pyproject.toml  release.sh  requirements.txt  run.sh  setup.sh  translate_xliff.py
.github/workflows/: auto-translate.yml  test.yml  validate-translations.yml
auto_translate_localizables/: __init__.py  cli.py  language_map.py  translator.py
