[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-translate-localizables"
version = "1.0.0"
description = "Automates Xcode .xcloc localization using reproducible, CI-friendly machine translation"
readme = "README.md"
authors = [
    {name = "Ehsan Azish", email = "ehsanazish80@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Localization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: X11 Applications",
]
keywords = ["xcode", "localization", "xliff", "translation", "ios", "macos", "automation"]

dependencies = [
    "deep-translator>=1.11.4",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
gui = []  # tkinter is part of Python standard library
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/EhsanAzish80/Auto-Translate-localizables"
Documentation = "https://github.com/EhsanAzish80/Auto-Translate-localizables#readme"
Repository = "https://github.com/EhsanAzish80/Auto-Translate-localizables"
Issues = "https://github.com/EhsanAzish80/Auto-Translate-localizables/issues"

[project.scripts]
auto-translate-xcloc = "auto_translate_localizables.cli:main"
xcloc-translate = "auto_translate_localizables.cli:main"

[tool.setuptools]
packages = ["auto_translate_localizables"]

[tool.setuptools.package-data]
auto_translate_localizables = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
